--- a/backend/.env.example
+++ b/backend/.env.example
@@ -6,6 +6,13 @@ SERVER_URL=http://localhost:3000
 # Database
 DATABASE_URL=""
 
+#Frontend
+FRONTEND_URL="http://localhost:3000"
+
+#Email Service
+
+EMAIL_SERVICE_API_KEY=""
+
 # Migration
 MIGRATE_MONGO_URI="" # Same as database url
 MIGRATE_AUTOSYNC="true" # false
